--- a/UITBuilding/Views/_ViewImports.cshtml
+++ b/UITBuilding/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using BuildingB
-@using BuildingB.Models
+﻿@using UITBuilding
+@using UITBuilding.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
