--- a/UITBuilding/Views/Home/Index.cshtml
+++ b/UITBuilding/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
                     url: "data/NhaE.json"
                 }),
                 nennhaA = new GeoJSONLayer({
-                    url: "data/nennhaA.json"
+                    url: "data/ToaA/nennhaA.json"
                 }),
                 //phonghocA
                 phonghocA = new GeoJSONLayer({
@@ -112,7 +112,7 @@
                 }),
                 //tangtretA
                 tangtretA = new GeoJSONLayer({
-                    url: "data/tangtretA.json"
+                    url: "data/ToaA/tangtretA.json"
                 }),
                 //mainhaA
                 mainhaA = new GeoJSONLayer({
